--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
   "repository": "https://github.com/landakram/mdast-util-wiki-link",
   "license": "MIT",
   "type": "module",
-  "types": "./dist/index.d.ts",
+  "files": [
+    "dist/"
+  ],
   "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
-    }
+    "development": "./src/index.ts",
+    "default": "./dist/index.js"
   },
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "build": "webpack",
+    "build": "tsc --build --clean && tsc --build",
     "lint": "eslint src/",
     "prepare": "npm run build",
     "pretest": "npm run build",
@@ -56,7 +56,7 @@
     "jest": "^29.6.2",
     "mdast-util-from-markdown": "^2.0.0",
     "micromark": "^2.10.1",
-    "micromark-extension-wiki-link": "^0.0.4",
+    "micromark-extension-wiki-link": "file:../micromark-extension-wiki-link",
     "mocha": "^8.2.0",
     "rollup": "^2.32.0",
     "ts-jest": "^29.1.1",
@@ -68,6 +68,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.1",
+    "@types/estree": "^1.0.5",
     "mdast-util-to-markdown": "^0.6.5"
   }
 }
