--- a/package.json
+++ b/package.json
@@ -60,10 +60,8 @@
     "mocha": "^8.2.0",
     "rollup": "^2.32.0",
     "ts-jest": "^29.1.1",
-    "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
-    "unist-util-visit": "^2.0.3",
-    "webpack-cli": "^5.1.4"
+    "unist-util-visit": "^2.0.3"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.1",
