--- a/package.json
+++ b/package.json
@@ -32,29 +32,26 @@
   },
   "scripts": {
     "build": "tsc --build --clean && tsc --build",
-    "lint": "eslint src/",
     "prepare": "npm run build",
-    "pretest": "npm run build",
-    "test": "npm run lint && NODE_OPTIONS=--experimental-vm-modules jest"
+    "lint": "eslint src/",
+    "test": "mocha"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "@types/jest": "^29.5.3",
+    "@types/node": "^22.5.1",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
+    "chai": "^5.1.1",
     "eslint": "^8.47.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "jest": "^29.6.2",
     "mdast-util-from-markdown": "^2.0.0",
     "micromark": "^2.10.1",
     "micromark-extension-wiki-link": "file:../micromark-extension-wiki-link",
-    "mocha": "^8.2.0",
-    "ts-jest": "^29.1.1",
+    "mocha": "^10.7.3",
+    "tsx": "^4.19.0",
     "typescript": "^5.1.6",
     "unist-util-visit": "^2.0.3"
   },
