--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "build": "tsc --build --clean && tsc --build",
     "prepare": "npm run build",
     "lint": "eslint src/",
-    "test": "mocha"
+    "test": "mocha",
+    "prettier": "npx prettier --write ./{src,test}"
   },
   "devDependencies": {
     "@types/node": "^22.5.1",
@@ -42,7 +43,7 @@
     "@typescript-eslint/parser": "^6.3.0",
     "chai": "^5.1.1",
     "eslint": "^8.47.0",
-    "eslint-config-standard": "^14.1.1",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
@@ -53,6 +54,7 @@
     "mocha": "^10.7.3",
     "tsx": "^4.19.0",
     "typescript": "^5.1.6",
+    "typescript-eslint": "^8.3.0",
     "unist-util-visit": "^2.0.3"
   },
   "dependencies": {
