--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "dependencies": {
     "@types/estree": "^1.0.5",
+    "@types/hast": "^3.0.4",
     "mdast-util-to-markdown": "^0.6.5"
   }
 }
