feat: update dependencies

--- a/package.json
+++ b/package.json
@@ -39,20 +39,21 @@
   },
   "devDependencies": {
     "@types/node": "^22.5.1",
-    "eslint": "^8.47.0",
+    "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
-    "mdast-util-from-markdown": "^2.0.0",
-    "micromark": "^2.10.1",
+    "mdast-util-from-markdown": "^2.0.1",
+    "micromark": "^4.0.0",
     "micromark-extension-wiki-link": "file:../micromark-extension-wiki-link",
     "mocha": "^10.7.3",
+    "prettier": "^3.3.3",
     "tsx": "^4.19.0",
-    "typescript": "^5.1.6",
+    "typescript": "^5.5.4",
     "typescript-eslint": "^8.3.0",
-    "unist-util-visit": "^2.0.3"
+    "unist-util-visit": "^5.0.0"
   },
   "dependencies": {
     "@types/estree": "^1.0.5",
     "@types/hast": "^3.0.4",
-    "mdast-util-to-markdown": "^0.6.5"
+    "mdast-util-to-markdown": "^2.1.0"
   }
 }
