--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,10 @@
     "forceConsistentCasingInFileNames": true,
     "declaration": true
   },
-  "include": ["src/**/*.ts"],
+  "include": [
+    "src/**/*.ts",
+    "test/**/*.ts"
+  ],
   "exclude": [
     "node_modules",
     "dist"
